--- a/.env
+++ b/.env
@@ -38,9 +38,9 @@
 #--------------------------------------------------------------------
 
 database.default.hostname = localhost
-database.default.database = db_she
-database.default.username = root
-database.default.password = 
+database.default.database = sfoe4134_HSEAPP
+database.default.username = sfoe4134_satriam
+database.default.password = satriabae
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 
