--- a/.env
+++ b/.env
@@ -14,7 +14,8 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
- CI_ENVIRONMENT = production
+ CI_ENVIRONMENT = development
+
 
 #--------------------------------------------------------------------
 # APP
@@ -38,9 +39,9 @@
 #--------------------------------------------------------------------
 
 database.default.hostname = localhost
-database.default.database = sfoe4134_HSEAPP
-database.default.username = sfoe4134_satriam
-database.default.password = satriabae
+database.default.database = db_she
+database.default.username = root
+database.default.password = 
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 
