--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
- CI_ENVIRONMENT = development
+ CI_ENVIRONMENT = production
 
 
 #--------------------------------------------------------------------
@@ -39,9 +39,9 @@
 #--------------------------------------------------------------------
 
 database.default.hostname = localhost
-database.default.database = db_she
-database.default.username = root
-database.default.password = 
+database.default.database = sfoe4134_HSEAPP
+database.default.username = sfoe4134_satriam
+database.default.password = satriabae
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 
